--- a/packages/header-component/src/components/dc-header/styles/header/_navbar.scss
+++ b/packages/header-component/src/components/dc-header/styles/header/_navbar.scss
@@ -64,9 +64,4 @@ dc-header .navbar {
       flex: 1;
     }
   }
-
-  &-item {
-    display: flex;
-    min-width: 2rem;
-  }
 }
